--- a/index.html
+++ b/index.html
@@ -175,10 +175,12 @@
 
                 <div class="contact__container bd-grid">
                     <form action="" class="contact__form">
+                        <label>
                         <input type="text" placeholder="Name" class="contact__input">
                         <input type="mail" placeholder="Email" class="contact__input">
                         <textarea name="" id="text" cols="0" rows="10" class="contact__input"></textarea>
                         <input type="button" value="Send" class="contact__button button">
+                        </label>
                     </form>
                 </div>
             </section>
